--- a/.github/workflows/deploy_tf_plan.yml
+++ b/.github/workflows/deploy_tf_plan.yml
@@ -8,8 +8,10 @@ jobs:
       steps:
         - uses: actions/checkout@v3
         - name: ls
-          run: ls
-          
+          run: |
+            ls 
+            ls data
+
 
 
     
