--- a/.github/workflows/deploy_tf_plan.yml
+++ b/.github/workflows/deploy_tf_plan.yml
@@ -8,7 +8,9 @@ jobs:
       steps:
         - uses: actions/checkout@v3
         - name: decrypt secrets.yml 
-          run: gpg --quiet --batch --yes --decrypt --passphrase= "${{ secrets.GPGKEY}}"  --output data/secret.yml.gpg  data/secret.yml
+          env: 
+            passphrase: ${{ secrets.GPGKEY }}
+          run: gpg --quiet --batch --yes --decrypt --passphrase="$passphrase"  --output data/secret.yml.gpg  data/secret.yml
         - name: result
           run: cat data/secret.yml
 
