--- a/.github/workflows/deploy_tf_plan.yml
+++ b/.github/workflows/deploy_tf_plan.yml
@@ -11,8 +11,10 @@ jobs:
           env: 
             passphrase: ${{ secrets.GPGKEY }}
           run: |
-            ls
-            gpg --quiet --batch --yes --decrypt --passphrase="$passphrase"  --output $HOME/data/secret.yml $HOME/data/secret.yml.gpg
+            ls -l 
+            echo $HOME
+            ls data/secrets.yml.gpg
+            gpg --quiet --batch --yes --decrypt --passphrase="$passphrase"  --output $HOME/data/secrets.yml $HOME/data/secrets.yml.gpg
         - name: result
           run: cat data/secret.yml
 
